--- a/src/app/pages/places/places.page.html
+++ b/src/app/pages/places/places.page.html
@@ -29,13 +29,13 @@
         </div>
         <div class="divc">
             <div class="iconos">
-                <div class="iconAuto" *ngIf="auto == 1">
+                <div class="iconAuto" *ngIf="auto == true">
                     <i class="fas fa-car"></i>
                 </div>
-                <div class="iconEstilos" *ngIf="bicicleta == 1">
+                <div class="iconEstilos" *ngIf="bicicleta == true">
                     <i class="fas fa-bicycle"></i>
                 </div>
-                <div class="iconEstilos" *ngIf="caminar == 1">
+                <div class="iconEstilos" *ngIf="caminar == true">
                     <i class="fas fa-running"></i>
                 </div>
                 <div id="dist">
