--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<div *ngIf="showSplash" class="splash">
+	<div class="spinner"></div>
+	<p>Cargando...</p>
+</div>
+
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
