--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -8,10 +8,10 @@
 </ion-header>
 
 <ion-content> 
-    
+    <p>{{distancia}}</p>
     <div id="contenedor">
       
-      <div id="mapaBox"></div>
+      <div id="mapaIndicador"></div>
 
     </div>
 </ion-content>
