--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -3,39 +3,24 @@
     <ion-buttons slot="start">
             <ion-back-button [routerLink]="['/places', id]"></ion-back-button>
     </ion-buttons>
+
     <ion-title>Ir a {{ nombre }}</ion-title>
+
+    <ion-label slot="end">
+      {{distancia | formatDistancia}}
+      <ion-icon name="{{icon}}"></ion-icon>      
+    </ion-label>
+    
+    
   </ion-toolbar>
 </ion-header>
 
 <ion-content> 
-    <!-- Boton fab -->
-  <ion-fab vertical="top" horizontal="start" slot="fixed">
-    <ion-fab-button>      
-      <ion-icon name="car-sport" *ngIf="profile == 'mapbox/driving-traffic'"></ion-icon>
-      <ion-icon name="walk" *ngIf="profile == 'mapbox/walking'"></ion-icon>
-      <ion-icon name="bicycle-outline" *ngIf="profile == 'mapbox/driving'"></ion-icon>      
-    </ion-fab-button>
 
-    <!-- Lista de botones de fab
-    <ion-fab-list side="top">
-        <ion-fab-button (click)="auto()">
-          
-        </ion-fab-button>
-        <ion-fab-button (click)="caminando()">
-          
-        </ion-fab-button>
-        
-    </ion-fab-list> -->
-
-  </ion-fab>
     <div id="contenedor">
       
       <div id="mapaIndicador"></div>
 
     </div>
 </ion-content>
-
-<ion-footer>
-  <ion-title>{{distancia}}</ion-title>
-</ion-footer>
 
