--- a/src/app/pages/places/places.page.scss
+++ b/src/app/pages/places/places.page.scss
@@ -103,6 +103,7 @@ ion-title {
 
 .infoSug {
     margin: 0 0 0 5%;
+    padding: 5%;
 }
 
 .iconEstilos {
@@ -117,6 +118,7 @@ ion-title {
     font-weight: bold;
     color: #B6B6B6;
     font-size: 13px;
+    margin-bottom: 5px;
 }
 
 .sugDistancia {
@@ -176,6 +178,8 @@ ion-title {
         font-weight: bold;
         color: #B6B6B6;
         font-size: 25px;
+        margin-top: 3px;
+        margin-bottom: 5px;
     }
 
     .sugDistancia {
