Arglando estilos de sugerencias

--- a/src/app/pages/places/places.page.html
+++ b/src/app/pages/places/places.page.html
@@ -56,7 +56,7 @@
         <div class="divf">
             <div class="sugerencia" *ngFor="let s of sug_2">
                 <a href="http://localhost/places/{{s.$key}}" class="sug">
-                    <img  src="{{ s.imagenPrincipal }}" alt="">
+                    <img class="sug_img" src="{{ s.imagenPrincipal }}" alt="">
                 </a>
                 <div class="infoSug">
                     <div class="sugNombre">{{ s.nombre }}</div>
