Se quitan los espacios en blanco del login y se cierra el teclado a pulsar enter en el password

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -15,7 +15,7 @@
             </ion-item>
 
             <ion-item>                
-                <ion-input class="password" name="password" type="password" placeholder="Contraseña" formControlName="password"></ion-input>
+                <ion-input class="password" name="password" type="password" (keyup.enter)="handleLogin()" placeholder="Contraseña" formControlName="password"></ion-input>
             </ion-item>
 
             <ion-item>
