--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -42,6 +42,17 @@ ion-button{
 	color: black;
 }
 
+.alert-danger{
+	
+}
+
+.container-error-message{
+	//color: #FF6153;
+}
+
+
+  
+
 ion-item{
 	border-bottom: none !important;
 }
