Se agrega boton flotante para ver el video

--- a/src/app/pages/places/places.page.html
+++ b/src/app/pages/places/places.page.html
@@ -1,4 +1,10 @@
 <ion-header>
+    <!-- fab placed to the top end -->
+  <ion-fab vertical="top" horizontal="start" slot="fixed">
+    <ion-fab-button routerLink="/video" color="danger">
+        <ion-icon name="logo-youtube"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
     <ion-toolbar color="primary">
         <ion-buttons slot="start">
             <ion-back-button defaultHref="home" color="back" text=""></ion-back-button>
