modal video + icono home wpp

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -11,12 +11,17 @@
             <ion-slides class="sliderPrimero" scrollbar="false" pager="false" [options]="slideOpts">
                 <ion-slide class="sliderHijo">
                     <a class="bannerLink" href="https://wa.me/59895030529?text=Hola,%20quería%20consultar%20sobre%20el%20servicio%20de%20bicicletas.">
+                        <ion-fab vertical="top" horizontal="start" slot="fixed">
+                            <ion-fab-button color="whatsapp">
+                                <ion-icon class="logoWhatsapp" name="logo-whatsapp"></ion-icon>
+                            </ion-fab-button>
+                        </ion-fab>
                         <img class="imgSlider" src="/assets/img/whatsapp.jpeg" />
                     </a>
                 </ion-slide>
                 <ion-slide class="sliderHijo">
                     <a class="bannerLink" href="https://casadominga.com.uy/">
-                        <img class="imgSlider" src="/assets/img/casaDominga.jpeg"/>
+                        <img class="imgSlider" src="/assets/img/casaDominga.jpeg" />
                     </a>
                 </ion-slide>
                 <ion-slide class="sliderHijo" [routerLink]="['/']">
@@ -26,12 +31,12 @@
                 </ion-slide>
                 <ion-slide class="sliderHijo" [routerLink]="['/']">
                     <div class="banner">
-                         <img class="imgSlider" src="/assets/img/bicicletas.jpeg" />
+                        <img class="imgSlider" src="/assets/img/bicicletas.jpeg" />
                     </div>
                 </ion-slide>
                 <ion-slide class="sliderHijo" [routerLink]="['/']">
                     <div class="banner">
-                      <img class="imgSlider" src="/assets/img/tour.jpeg" />  
+                        <img class="imgSlider" src="/assets/img/tour.jpeg" />
                     </div>
                 </ion-slide>
             </ion-slides>
