--- a/src/global.scss
+++ b/src/global.scss
@@ -34,3 +34,10 @@
    margin-left: 4%;
    margin-right: 4%;
 }
+
+.modal-video .modal-wrapper {
+   height: 359px;
+   display: block; 
+   margin-left: 4%;
+   margin-right: 4%;
+}
