page casas de fiesta

--- a/src/app/pages/art-culture/art-culture.page.html
+++ b/src/app/pages/art-culture/art-culture.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-back-button defaultHref="home" color="back"></ion-back-button>
+            <ion-back-button defaultHref="/more-options" color="back"></ion-back-button>
         </ion-buttons>
         <ion-title>art-culture</ion-title>
     </ion-toolbar>
