--- a/src/app/pages/more-options/more-options.page.html
+++ b/src/app/pages/more-options/more-options.page.html
@@ -52,6 +52,18 @@
                 </ion-col>
             </ion-row>
         </a>
+        <a class="hrefIcon" routerLink="/party-house">
+            <ion-row>
+                <ion-col size="2">
+                    <div>
+                        <ion-img src="/assets/icon/fiesta.jpg"></ion-img>
+                    </div>
+                </ion-col>
+                <ion-col>
+                    <p class="text">Casas de Fiesta</p>
+                </ion-col>
+            </ion-row>
+        </a>
         <a class="hrefIcon" routerLink="/art-culture">
             <ion-row>
                 <ion-col size="2">
