--- a/src/app/pages/party-house/party-house.page.html
+++ b/src/app/pages/party-house/party-house.page.html
@@ -1,10 +1,10 @@
 <ion-header>
-    <ion-toolbar color="eat">
+    <ion-toolbar color="party">
         <ion-buttons slot="start">
             <ion-back-button defaultHref="/more-options" color="back"></ion-back-button>
         </ion-buttons>
-        <ion-img slot="start" src="/assets/icon/comida.png"></ion-img>
-        <ion-title>¿Dónde Comer?</ion-title>
+        <ion-img slot="start" src="/assets/icon/fiesta.jpg"></ion-img>
+        <ion-title>Casas de Fiesta</ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -19,9 +19,11 @@
                 </div>
                 <div class="info">
                     <ion-label>
-                        <h2>{{ item.nombre }}</h2>
+                        <h2 *ngIf="item.nombre.length < 25">{{ item.nombre }}</h2>
+                        <h2 class="tamaño_25" *ngIf="item.nombre.length >= 25">{{ item.nombre }}</h2>
                         <div class="infoAbajo">
-                            <h3>{{ item.direccion }}</h3>
+                            <h3 class="tamaño_30" *ngIf="item.direccion.length >= 30">{{ item.direccion }}</h3>
+                            <h3 *ngIf="item.direccion.length < 30">{{ item.direccion }}</h3>
                             <p><span>Tel: </span>{{ item.telefono }}</p>
                         </div>
                     </ion-label>
