--- a/src/app/pages/places/places.page.scss
+++ b/src/app/pages/places/places.page.scss
@@ -92,12 +92,12 @@ ion-title {
 
 .sug {
     border-radius: 3px;
-    width: 46%;    
+    width: 46%;
 }
 
 .sug_img {
     border-radius: 3px;
-    width: 100%;    
+    width: 100%;
 }
 
 .interes {
@@ -166,12 +166,20 @@ ion-title {
 /* DOES NOT WORK - not specific enough */
 .action-sheet-group {
     background: #7b89d8;
-  }
-  
-  /* Works - pass "my-custom-class" in cssClass to increase specificity */
-  .my-custom-class .action-sheet-group {
+}
+
+/* Works - pass "my-custom-class" in cssClass to increase specificity */
+.my-custom-class .action-sheet-group {
     background: #e5e5e5;
-  }
+}
+
+.lista_videos {
+    margin-left: 100%;
+}
+
+.btn_video{
+    margin-left: 3%;
+}
 
 @media only screen and (min-width: 768px) {
     .interes {
@@ -284,7 +292,7 @@ ion-title {
         font-size: 25px;
     }
 
-    .diva{
+    .diva {
         width: 100%;
         height: 34%;
     }
@@ -299,7 +307,7 @@ ion-title {
         margin: 2% 2% 0 0;
     }
 
-    .diva{
+    .diva {
         width: 100%;
         height: 35%;
     }
@@ -308,7 +316,7 @@ ion-title {
         width: 100%;
         height: 15%;
         margin-top: 0.5%;
-    }    
+    }
 }
 
 @media only screen and (min-height: 600px) and (max-height: 736px) {
