--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -8,7 +8,7 @@
 
     <ion-label slot="end">      
       <ion-icon name="{{icon}}"></ion-icon> 
-      {{distancia | formatDistancia}}       
+      {{distancia | formatDistanceMap}}       
     </ion-label>
     
     
