--- a/src/app/pages/more-options/more-options.page.html
+++ b/src/app/pages/more-options/more-options.page.html
@@ -56,7 +56,7 @@
             <ion-row>
                 <ion-col size="2">
                     <div>
-                        <ion-img src="/assets/icon/fiesta.jpg"></ion-img>
+                        <ion-img src="/assets/icon/party.png"></ion-img>
                     </div>
                 </ion-col>
                 <ion-col>
@@ -92,7 +92,7 @@
             <ion-row>
                 <ion-col size="2">
                     <div>
-                        <!-- <ion-img src="/assets/icon/dormir.png"></ion-img> -->
+                        <ion-img src="/assets/icon/visit.png"></ion-img>
                     </div>
                 </ion-col>
                 <ion-col>
