--- a/src/app/pages/party-house/party-house.page.html
+++ b/src/app/pages/party-house/party-house.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-back-button defaultHref="/more-options" color="back"></ion-back-button>
         </ion-buttons>
-        <ion-img slot="start" src="/assets/icon/fiesta.jpg"></ion-img>
+        <ion-img slot="start" src="/assets/icon/party.png"></ion-img>
         <ion-title>Casas de Fiesta</ion-title>
     </ion-toolbar>
 </ion-header>
