--- a/src/app/pages/places/places.page.scss
+++ b/src/app/pages/places/places.page.scss
@@ -358,3 +358,18 @@ ion-title {
         height: 5%;
     }
 }
+
+@media only screen and (max-width: 365px) {
+    .sugNombre {
+        font-weight: bold;
+        color: #B6B6B6;
+        font-size: 10px;
+    }
+
+    .sugDistancia {
+        font-weight: 600;
+        color: #000000;
+        font-size: 8px;
+    }
+
+}
