--- a/src/app/pages/circuits/circuits.page.scss
+++ b/src/app/pages/circuits/circuits.page.scss
@@ -27,6 +27,8 @@ ion-card-header{
 	font-weight: 600;
 	font-size: 120%;
 	color: #ffffff;
+	border-top-left-radius: 15px !important;
+	border-top-right-radius: 15px !important;
 }
 
 ion-card {
