--- a/src/app/pages/party-house/party-house.page.scss
+++ b/src/app/pages/party-house/party-house.page.scss
@@ -3,10 +3,9 @@
     padding: 0px !important;
 }
 
-ion-avatar,
-ion-avatar>img {
+ion-avatar, ion-avatar>img {
     border-radius: 15% !important;
-    height: 100%;
+    height: 95%;
     width: 100%;
 }
 
@@ -21,14 +20,14 @@ ion-item {
     margin-top: 4%;
 }
 
-ion-img{
-	width: 12%;
-	margin-left: 8%;
+ion-img {
+    width: 12%;
+    margin-left: 8%;
 }
 
-ion-title{
-	color: white;
-	font-weight: 700;
+ion-title {
+    color: #fff;
+    font-weight: 700;
 }
 
 h2 {
@@ -38,13 +37,13 @@ h2 {
 
 h3 {
     font-weight: bold;
-    color: #000000;
+    color: var(--ion-color-dark);
     font-size: 80%;
 }
 
 span {
     font-weight: bold;
-    color: #000000;
+    color: var(--ion-color-dark);
     font-size: 90%;
 }
 
@@ -63,11 +62,7 @@ span {
 .info {
     width: 75%;
     margin-left: 5%;
-}
-
-.infoAbajo {
-    bottom: 0;
-    position: relative;
+    padding: 3% 2% 2% 5%;
 }
 
 .img-elem{
@@ -78,10 +73,6 @@ span {
 
 .lista{
     height: 100%;
-}
-
-.item{
-    height: 115px;
 }
 
 .tamaño_25{
