--- a/src/app/pages/where-sleep/where-sleep.page.scss
+++ b/src/app/pages/where-sleep/where-sleep.page.scss
@@ -37,13 +37,13 @@ h2 {
 
 h3 {
     font-weight: bold;
-    color: #000000;
+    color: var(--ion-color-dark);
     font-size: 80%;
 }
 
 span {
     font-weight: bold;
-    color: #000000;
+    color: var(--ion-color-dark);
     font-size: 90%;
 }
 
