--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -148,9 +148,9 @@
     --ion-color-party-tint: #e91bff;
 }
 
-ion-item {
-    --border-color: white;
-}
+// ion-item {
+//     --border-color: white;
+// }
 
 .ion-color-information {
     --ion-color-base: var(--ion-color-information) !important;
