--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,14 +7,17 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: #fff;
+	background-color: var(--ion-color-light);
+}
+
+p{
+  color: var(--ion-color-dark);
 }
 
 .spinner {
   width: 40px;
   height: 40px;
-  background-color: #000;
-
+  background-color: var(--ion-color-dark);
   margin: 100px auto;
   -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
   animation: sk-rotateplane 1.2s infinite ease-in-out;
