--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -7,7 +7,7 @@
 }
 
 .email, .password{
-	background-color: #EAEAEA;
+	background-color: var(--ion-color-ligth);
 	border-radius: 8px;
 	padding-left: 4% !important;
 }
@@ -49,9 +49,6 @@ ion-button{
 .container-error-message{
 	//color: #FF6153;
 }
-
-
-  
 
 ion-item{
 	border-bottom: none !important;
