--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -1,6 +1,5 @@
 .container{
-	display: flex;
-	justify-content: center;
+	text-align: center;
 }
 
 .logo{
@@ -8,7 +7,7 @@
 }
 
 .email, .password{
-	background-color: #EAEAEA;
+	background-color: var(--ion-color-ligth);
 	border-radius: 8px;
 	padding-left: 4% !important;
 }
