--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -7,7 +7,7 @@
 }
 
 .email, .password{
-	background-color: var(--ion-color-ligth);
+	background-color: var(--ion-color-light);
 	border-radius: 8px;
 	padding-left: 4% !important;
 }
