Se crean mensajes personalizados para el login

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -42,12 +42,9 @@ ion-button{
 	color: black;
 }
 
-.alert-danger{
+.custom-alert{
 	
-}
 
-.container-error-message{
-	//color: #FF6153;
 }
 
 ion-item{
