--- a/src/app/pages/more-options/more-options.page.scss
+++ b/src/app/pages/more-options/more-options.page.scss
@@ -42,13 +42,13 @@ h2 {
 
 h3 {
     font-weight: bold;
-    color: #000000;
+    color: var(--ion-color-dark);
     font-size: 80%;
 }
 
 span {
     font-weight: bold;
-    color: #000000;
+    color: var(--ion-color-dark);
     font-size: 90%;
 }
 
