--- a/src/app/pages/places/places.page.html
+++ b/src/app/pages/places/places.page.html
@@ -20,7 +20,7 @@
         <ion-fab-button color="danger">
             <ion-icon name="logo-youtube"></ion-icon>
         </ion-fab-button>
-        <ion-fab-list side="end" class="lista_videos">
+        <ion-fab-list side="bottom" class="lista_videos">
             <ion-fab-button class="btn_video" *ngFor="let videos of video">
                 <i (click)="verVideo(videos.video)" class="fas fa-video"></i>
             </ion-fab-button>
