--- a/src/app/pages/places/places.page.scss
+++ b/src/app/pages/places/places.page.scss
@@ -174,11 +174,11 @@ ion-title {
 }
 
 .lista_videos {
-    margin-left: 100%;
+    margin-top: 100%;
 }
 
 .btn_video{
-    margin-left: 3%;
+    margin-top: 10%;
 }
 
 @media only screen and (min-width: 768px) {
