--- a/src/app/pages/places/places.page.scss
+++ b/src/app/pages/places/places.page.scss
@@ -10,7 +10,7 @@ ion-title {
 
 .diva {
     width: 100%;
-    height: 30%;
+    height: 44%;
 }
 
 .divb {
@@ -32,7 +32,7 @@ ion-title {
 
 .divf {
     width: 100%;
-    height: 14%;
+    height: 4em;
     display: flex;
     flex-direction: row;
 }
@@ -124,12 +124,13 @@ ion-title {
 .sugNombre {
     font-weight: bold;
     color: #B6B6B6;
-    font-size: 13px;
+    font-size: 0.6em;
     margin-bottom: 5px;
 }
 
 .sugDistancia {
-    font-weight: 600;
+    font-weight: 400;
+    font-size: 0.4em;
     color: var(--ion-color-dark);
     font-size: 10px;
 }
@@ -309,7 +310,7 @@ ion-title {
 
     .diva {
         width: 100%;
-        height: 35%;
+        height: 42%;
     }
 
     .divb {
@@ -322,7 +323,7 @@ ion-title {
 @media only screen and (min-height: 600px) and (max-height: 736px) {
     .diva {
         width: 100%;
-        height: 32%;
+        height: 44%;
     }
 
     .divb {
@@ -342,7 +343,7 @@ ion-title {
 @media only screen and (min-height: 737px) and (max-height: 980px) {
     .diva {
         width: 100%;
-        height: 33%;
+        height: 44%;
     }
 
     .divb {
