--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -17,7 +17,7 @@
         <div class="slider">
             <ion-slides class="sliderPrimero" scrollbar="false" pager="false" [options]="slideOpts">
                 <ion-slide class="sliderHijo">
-                    <a class="bannerLink" href="https://wa.me/59899468473?text=Hola,%20quería%20consultar%20sobre%20el%20servicio%20de20%alquiler%20de%20bicicletas.">
+                    <a class="banner" href="https://wa.me/59899468473?text=Hola,%20quería%20consultar%20sobre%20el%20servicio%20de20%alquiler%20de%20bicicletas.">
                         <ion-fab vertical="top" horizontal="start" slot="fixed">
                             <ion-fab-button color="whatsapp">
                                 <ion-icon class="logoWhatsapp" name="logo-whatsapp"></ion-icon>
@@ -27,7 +27,7 @@
                     </a>
                 </ion-slide>
                 <ion-slide class="sliderHijo">
-                    <a class="bannerLink" href="https://casadominga.com.uy/">
+                    <a class="banner" href="https://casadominga.com.uy/">
                         <img class="imgSlider" src="/assets/img/casaDominga.jpeg" />
                     </a>
                 </ion-slide>
