--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -61,7 +61,7 @@ ion-label {
 }
 
 .slider {
-    height: 45%;
+    height: 36%;
     //border: 1px solid black;
 }
 
@@ -101,7 +101,7 @@ ion-label {
 .sliderHijo,
 .bannerLink,
 .imgSlider {
-    height: 100%;
+    //height: 100%;
     width: 100%;
 }
 
@@ -109,7 +109,7 @@ ion-label {
 .sliderHijo,
 .banner,
 .imgSlider {
-    height: 100%;
+    //height: 100%;
     width: 100%;
 }
 
@@ -117,8 +117,10 @@ ion-label {
 .cpadre {
     height: 100%;
     width: 100%;
-    margin-left: 8%;
-    margin-right: 8%;
+    //margin-left: 8%;
+    //margin-right: 8%;
+    margin-left: 1.5%;
+    margin-right: 1.5%;
     display: flex;
     flex-direction: column;
     justify-content: center;
