--- a/src/app/pages/places/places.page.scss
+++ b/src/app/pages/places/places.page.scss
@@ -10,12 +10,12 @@ ion-title {
 
 .diva {
     width: 100%;
-    height: 44%;
+    height: auto;
 }
 
 .divb {
     width: 100%;
-    height: 11%;
+    height: auto;
     margin-top: 0.5%;
 }
 
@@ -26,7 +26,7 @@ ion-title {
 
 .divd {
     width: 100%;
-    height: 20%;
+    height: 100px;
     margin-top: 1.5%;
 }
 
@@ -40,13 +40,13 @@ ion-title {
 
 .imgPrincipal {
     width: 100%;
-    height: 100%;
+    height: auto;
     border-radius: 5px 5px 0 0;
 }
 
 .padre {
     width: 100%;
-    height: 100%;
+    height: auto;
     padding: 3% 3% 0 3%;
 }
 
